hphp/hack/test/typecheck/modules/module_bad_override.php.exp
File "module_bad_override.php--B.php", line 4, characters 21-26:
Cannot override this member outside module `A` (Typing[4444])
  File "module_bad_override.php--A.php", line 6, characters 21-26:
  This member is internal to module `A`
